force-app/main/default/objects/JobStep__c/JobStep__c.object-meta.xml
<CustomObject>
    <description>A Job Step is a task that is performed as a result of a job template execution.</description>
    <label>Job Step</label>
    <nameField>
        <label>Job Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>