force-app/main/default/objects/JobStep__c/fields/ConfigJson__c.field-meta.xml
<CustomField>
    <fullName>ConfigJson__c</fullName>
    <description>Config Json stores Job step related configuration information, for example in case of manual step it contains manual task assignee and instructions.</description>
    <inlineHelpText>Config Json stores Job step related configuration information, for example in case of manual step it contains manual task assignee and instructions.</inlineHelpText>
    <label>ConfigJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>