force-app/main/default/objects/JobStep__c/fields/Destination_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Id__c</fullName>
    <description>Id of the destination environment.</description>
    <formula>CASESAFEID(JobExecution__r.Destination__c)</formula>
    <inlineHelpText>Id of the destination environment.</inlineHelpText>
    <label>Destination Id</label>
    <type>Text</type>
</CustomField>