force-app/main/default/objects/JobStep__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <description>Id of the Git repository record linked to the pipeline.</description>
    <formula>Git_RepositoryId__c</formula>
    <inlineHelpText>Id of the Git repository record linked to the pipeline to which the job step appliies.</inlineHelpText>
    <label>Git Repository</label>
    <type>Text</type>
</CustomField>