force-app/main/default/objects/JobStep__c/fields/Git_RepositoryId__c.field-meta.xml
<CustomField>
    <fullName>Git_RepositoryId__c</fullName>
    <description>Store git repository Id linked to Job step</description>
    <label>Git RepositoryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>