force-app/main/default/objects/JobStep__c/fields/IsSkipped__c.field-meta.xml
<CustomField>
    <fullName>IsSkipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Skipped?</label>
    <type>Checkbox</type>
</CustomField>