force-app/main/default/objects/JobStep__c/fields/JobExecution__c.field-meta.xml
<CustomField>
    <fullName>JobExecution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A job execution is a representation of a job template execution at a given point in time.</description>
    <inlineHelpText>The job Execution associated with the step</inlineHelpText>
    <label>Job Execution</label>
    <referenceTo>JobExecution__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>