force-app/main/default/objects/JobStep__c/fields/Parent_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Owner_Id__c</fullName>
    <formula>OwnerId</formula>
    <label>Parent Owner Id</label>
    <type>Text</type>
</CustomField>