force-app/main/default/objects/JobStep__c/fields/Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Id__c</fullName>
    <description>Id of the pipeline in which the job step has been executed.</description>
    <formula>PipelineId__c</formula>
    <inlineHelpText>Id of the pipeline in which the job step has been executed.</inlineHelpText>
    <label>Pipeline Id</label>
    <type>Text</type>
</CustomField>