force-app/main/default/objects/JobStep__c/fields/PipelineId__c.field-meta.xml
<CustomField>
    <fullName>PipelineId__c</fullName>
    <description>Stores pipeline Id linked to job execution</description>
    <inlineHelpText>Stores pipeline Id linked to job execution</inlineHelpText>
    <label>PipelineId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>