force-app/main/default/objects/JobStep__c/fields/Quality_Gate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Quality_Gate_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quality check performed by the job step.</description>
    <inlineHelpText>The quality check performed by the job step.</inlineHelpText>
    <label>Quality Gate Rule</label>
    <referenceTo>Quality_Gate_Rule__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>Job_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>