force-app/main/default/objects/JobStep__c/fields/Quality_Gate_Rule_Condition__c.field-meta.xml
<CustomField>
    <fullName>Quality_Gate_Rule_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The scope, filter, and acceptance criteria defined for the quality gate rule referenced in the job step.</description>
    <inlineHelpText>The scope, filter, and acceptance criteria defined for the quality gate rule referenced in the job step.</inlineHelpText>
    <label>Quality Gate Rule Condition</label>
    <referenceTo>Quality_Gate_Rule_Condition__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>Job_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>