force-app/main/default/objects/JobStep__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The latest result associated with the job step.</description>
    <inlineHelpText>The latest result associated with the job step.</inlineHelpText>
    <label>Last Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>