force-app/main/default/objects/JobStep__c/fields/Result_Viewer_Component__c.field-meta.xml
<CustomField>
    <fullName>Result_Viewer_Component__c</fullName>
    <inlineHelpText>This is the name of the lightning component that you want to render on the related result record. The name must be in the namespace:componentName format.</inlineHelpText>
    <label>Result Viewer Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>