force-app/main/default/objects/JobStep__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description>Id of the source environment.</description>
    <formula>CASESAFEID(JobExecution__r.Source__c)</formula>
    <inlineHelpText>Id of the source environment.</inlineHelpText>
    <label>Source Id</label>
    <type>Text</type>
</CustomField>