force-app/main/default/objects/JobStep__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the Job Step.</description>
    <formula>IF(NOT(ISBLANK(JobTemplate__c)), &apos;NA&apos;, 
  IF(IsSkipped__c , &apos;Skipped&apos;,
    IF(ISBLANK(Result__c), &apos;Pending&apos;, TEXT(Result__r.Status__c))))</formula>
    <inlineHelpText>The status of the Job Step.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>