force-app/main/default/objects/JobStep__c/fields/Sub_Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Sub_Job_Execution__c</fullName>
    <description>Technical field. Not available in the page/layout.</description>
    <inlineHelpText>The Id of the related job execution that performs additional steps and operations, such as running a test.</inlineHelpText>
    <label>Sub Job Execution</label>
    <length>18</length>
    <type>Text</type>
</CustomField>